
bin_PROGRAMS= diameter
diameter_SOURCES= main.cpp uni.h \
		  gra/mathlib.cpp gra/mathlib.h gra/model.cpp \
		  gra/model.h gra/sprite.cpp gra/sprite.h \
		  gra/model_init.cpp gra/model_init.h \
		  gra/2d/gui.cpp gra/2d/gui.h \
		  gra/2d/image_button.h gra/2d/image_button.cpp \
		  gra/2d/fonts_button.h gra/2d/fonts_button.cpp \
		  gra/2d/text_checkbox.h gra/2d/text_checkbox.cpp icon_ext.h \
		  gra/2d/simple2d.cpp gra/2d/simple2d.h \
		  gra/effect/cloud.cpp gra/effect/cloud.h \
		  gra/effect/explosion.cpp gra/effect/explosion.h \
		  gra/effect/particle.cpp gra/effect/particle.h \
		  gra/effect/stars.cpp gra/effect/stars.h \
		  res/3ds.cpp res/3ds.h res/tga.c res/tga.h \
		  res/3dsloader.cpp res/3dsloader.h res.h \
		  res/texture.cpp res/texture.h \
		  res/loadworld.cpp res/loadworld.h\
		  res/xml/tinystr.cpp res/xml/tinystr.h \
		  res/xml/tinyxml.cpp res/xml/tinyxml.h \
		  res/xml/tinyxmlerror.cpp res/xml/tinyxmlparser.cpp \
		  snd/snd.cpp snd/snd.h \
		  wor/AI.cpp wor/AI.h wor/deftype.h \
		  wor/fiz.cpp wor/fiz.h wor/object.cpp wor/object.h \
		  wor/decoration.cpp wor/decoration.h \
		  wor/pylevel.cpp wor/pylevel.h \
		  wor/objects/gao.cpp wor/objects/gao.h \
		  wor/objects/pul.cpp wor/objects/pul.h \
		  wor/objects/roc.cpp wor/objects/roc.h \
		  wor/objects/tim.cpp wor/objects/tim.h \
		  wor/objects/sta.cpp wor/objects/sta.h \
		  wor/objects/nul.cpp wor/objects/nul.h
