pkgdatadir = $(datadir)/@PACKAGE@/pyscripts
#pkgdata_DATA = test_level.py test_level1.py test_level_next.py
pkgdata_DATA = test_mission1.py test_mission1d1_next.py test_mission1d1_ok.py test_mission1d4_ok.py test_mission1state1.py test_mission1d2_ok.py test_mission1state2.py test_mission1state3.py test_mission1state4.py arena.py
EXTRA_DIST = $(pkgdata_DATA)



