pkgdatadir = $(datadir)/@PACKAGE@/texture
pkgdata_DATA = Argon.jpg Brat.jpg Cloud4.jpg  lav1.jpg nebular3.jpg s_n1.jpg \
back.png Cloud1.png  flame2.jpg  Liser1.jpg null.jpg spaceshiptexture.jpg \
blue_sphere.jpg  Cloud2.png  flame.jpg  p1.png test.png \
blue_sphere.png  Cloud3.png  gui nebular3.gif textures.xml

EXTRA_DIST = $(pkgdata_DATA)

SUBDIRS = Rockets gui ship1 ship2 ship3 ship4

