pkgdatadir = $(datadir)/@PACKAGE@/texture/gui/rus/main
pkgdata_DATA = credits-.png  logo-.png   new.png options.png  quit.png \
               resume.png   return.png  start.png \
               credits.png   logo.png   new-.png options-.png  quit-.png \
               resume-.png  return-.png  start-.png

EXTRA_DIST = $(pkgdata_DATA)




